Add initial HTML structure and assets for Please Buy website

--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Online Shopping</title>
+    <title>Please Buy</title>
     <link rel="stylesheet" href="style.css" />
     <script src="src/main.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <img src="img/pleasebuy.png" alt="logo" class="logo" />
+    <button class="btn">
+      <img src="img/apple.png" alt="apple" class="imgBtn" />
+    </button>
+    <button class="btn">
+      <img src="img/samsung.webp" alt="samsung" class="imgBtn" />
+    </button>
+    <button class="btn">
+      <img src="img/Xiaomi.png" alt="xiaomi" class="imgBtn" />
+    </button>
+    <button class="btn colorBtn silver">Silver</button>
+    <button class="btn colorBtn dark blue">Dark Blue</button>
+    <button class="btn colorBtn black">Black</button>
+    <ul class="items">
+      <li class="item">
+        <img src="img/apple.png" alt="apple" class="item__thumbnail" />
+        <span class="item__descroption">Phone, 128GB</span>
+      </li>
+    </ul>
+  </body>
 </html>
