Refine CSS styling and include favicon for branding

--- a/index.html
+++ b/index.html
@@ -6,21 +6,31 @@
     <title>Please Buy</title>
     <link rel="stylesheet" href="style.css" />
     <script src="src/main.js" defer></script>
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Amaranth:ital,wght@0,400;0,700;1,400;1,700&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Rajdhani:wght@300;400;500;600;700&family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <img src="img/pleasebuy.png" alt="logo" class="logo" />
-    <button class="btn">
-      <img src="img/apple.png" alt="apple" class="imgBtn" />
-    </button>
-    <button class="btn">
-      <img src="img/samsung.webp" alt="samsung" class="imgBtn" />
-    </button>
-    <button class="btn">
-      <img src="img/Xiaomi.png" alt="xiaomi" class="imgBtn" />
-    </button>
-    <button class="btn colorBtn silver">Silver</button>
-    <button class="btn colorBtn dark blue">Dark Blue</button>
-    <button class="btn colorBtn black">Black</button>
+    <div class="buttons">
+      <button class="btn">
+        <img src="img/apple.png" alt="apple" class="imgBtn" />
+      </button>
+      <button class="btn">
+        <img src="img/samsung.png" alt="samsung" class="imgBtn" />
+      </button>
+      <button class="btn">
+        <img src="img/Xiaomi.png" alt="xiaomi" class="imgBtn" />
+      </button>
+      <button class="btn colorBtn silver">Silver</button>
+      <button class="btn colorBtn darkBlue">Dark Blue</button>
+      <button class="btn colorBtn black">Black</button>
+    </div>
     <ul class="items">
       <li class="item">
         <img src="img/apple.png" alt="apple" class="item__thumbnail" />
