--- a/index.html
+++ b/index.html
@@ -16,26 +16,28 @@
     />
   </head>
   <body>
-    <img src="img/pleasebuy.png" alt="logo" class="logo" />
-    <div class="buttons">
-      <button class="btn">
-        <img src="img/apple.png" alt="apple" class="imgBtn" />
-      </button>
-      <button class="btn">
-        <img src="img/samsung.png" alt="samsung" class="imgBtn" />
-      </button>
-      <button class="btn">
-        <img src="img/Xiaomi.png" alt="xiaomi" class="imgBtn" />
-      </button>
-      <button class="btn colorBtn silver">Silver</button>
-      <button class="btn colorBtn darkBlue">Dark Blue</button>
-      <button class="btn colorBtn black">Black</button>
+    <div class="content-wrapper">
+      <img src="img/pleasebuy.png" alt="logo" class="logo" />
+      <div class="buttons">
+        <button class="btn">
+          <img src="img/apple.png" alt="apple" class="imgBtn_apple" />
+        </button>
+        <button class="btn">
+          <img src="img/samsung.png" alt="samsung" class="imgBtn" />
+        </button>
+        <button class="btn">
+          <img src="img/Xiaomi.png" alt="xiaomi" class="imgBtn" />
+        </button>
+        <button class="btn colorBtn silver">Silver</button>
+        <button class="btn colorBtn darkBlue">Dark Blue</button>
+        <button class="btn colorBtn black">Black</button>
+      </div>
+      <ul class="items">
+        <li class="item">
+          <img src="img/apple.png" alt="apple" class="item__thumbnail" />
+          <span class="item__description">Phone, 128GB</span>
+        </li>
+      </ul>
     </div>
-    <ul class="items">
-      <li class="item">
-        <img src="img/apple.png" alt="apple" class="item__thumbnail" />
-        <span class="item__descroption">Phone, 128GB</span>
-      </li>
-    </ul>
   </body>
 </html>
