dynamically display items with updated layout and styling

--- a/index.html
+++ b/index.html
@@ -32,12 +32,7 @@
         <button class="btn colorBtn darkBlue">Dark Blue</button>
         <button class="btn colorBtn black">Black</button>
       </div>
-      <ul class="items">
-        <li class="item">
-          <img src="img/apple.png" alt="apple" class="item__thumbnail" />
-          <span class="item__description">Phone, 128GB</span>
-        </li>
-      </ul>
+      <ul class="items"></ul>
     </div>
   </body>
 </html>
