Add filtering functionality by category and implement responsive design enhancements

--- a/index.html
+++ b/index.html
@@ -20,17 +20,47 @@
       <img src="img/pleasebuy.png" alt="logo" class="logo" />
       <div class="buttons">
         <button class="btn">
-          <img src="img/apple.png" alt="apple" class="imgBtn_apple" />
+          <img
+            src="img/apple.png"
+            alt="apple"
+            class="imgBtn_apple"
+            data-key="brand"
+            data-value="apple"
+          />
         </button>
         <button class="btn">
-          <img src="img/samsung.png" alt="samsung" class="imgBtn" />
+          <img
+            src="img/samsung.png"
+            alt="samsung"
+            data-key="brand"
+            data-value="samsung"
+          />
         </button>
         <button class="btn">
-          <img src="img/Xiaomi.png" alt="xiaomi" class="imgBtn" />
+          <img
+            src="img/Xiaomi.png"
+            alt="xiaomi"
+            data-key="brand"
+            data-value="xiaomi"
+          />
         </button>
-        <button class="btn colorBtn silver">Silver</button>
-        <button class="btn colorBtn darkBlue">Dark Blue</button>
-        <button class="btn colorBtn black">Black</button>
+        <button
+          class="btn colorBtn silver"
+          data-key="color"
+          data-value="silver"
+        >
+          Silver
+        </button>
+        <button
+          class="btn colorBtn darkBlue"
+          data-key="color"
+          data-value="darkBlue"
+        >
+          Dark Blue
+        </button>
+        <button class="btn colorBtn black" data-key="color" data-value="black">
+          Black
+        </button>
       </div>
       <ul class="items"></ul>
     </div>
